# shark-collection

./: LICENSE  README.md
sc-frontend/: README.md  package.json  pnpm-lock.yaml
sc-server/: .gitignore  Cargo.toml
sc-server/.cargo/: config
sc-server/migrate/: sc_catalog.sql  sc_item.sql  sc_tag.sql  sc_tag_map.sql
sc-server/src/: common.rs  config.rs  error.rs  init.rs  main.rs  types.rs
sc-server/src/model/: entity.rs  request.rs
sc-server/src/router/: mod.rs  pong.rs
sc-server/src/router/catalog/: entity.rs  mod.rs
sc-server/src/router/item/: entity.rs  mod.rs
sc-server/src/router/save/: mod.rs
sc-server/src/router/tag/: entity.rs  mod.rs
