[package]
name = "sc-server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web Frame
axum = "0.6.0-rc.1"
tower = "^0.4"
hyper = { version = "^0.14", features = ["full"] }
tower-http = { version = "^0.3", features = ["cors", "trace", "compression-gzip"] }

# Async
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }

# Serde
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"

# Log system
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Database Connection
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }

# Misc
anyhow = "^1.0"
thiserror = "1.0"
once_cell = "^1.13"
dotenvy = "^0.15"

[dev.dependencies]
minstant = "0.1.2"